infrastructure/argo-cd/env/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: argo-cd.quizmeup
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server-ingress
                port:
                  number: 443
  tls:
    - hosts:
        - argo-cd.quizmeup
      secretName: argocd-tls
